--- a/TriviaGame/app/src/main/res/layout/activity_multiplayer_screen.xml
+++ b/TriviaGame/app/src/main/res/layout/activity_multiplayer_screen.xml
@@ -10,14 +10,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BACK"
-        app:layout_editor_absoluteX="16dp"
-        app:layout_editor_absoluteY="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.00"
+        app:layout_constraintHorizontal_bias="0.979"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.00"/>
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_editor_absoluteX="16dp"
+        app:layout_editor_absoluteY="16dp" />
 
     <TextView
         android:id="@+id/titleTxt"
