--- a/TriviaGame/app/src/main/res/layout/activity_credits_screen.xml
+++ b/TriviaGame/app/src/main/res/layout/activity_credits_screen.xml
@@ -7,35 +7,64 @@
     tools:context="fullsailclass.triviagame.CreditsScreen">
 
     <TextView
-        android:id="@+id/CreatedByText"
+        android:id="@+id/ProgrammedByText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Created by:"
+        android:text="Programmed by:"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.539"
+        app:layout_constraintHorizontal_bias="0.54"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.325" />
+        app:layout_constraintVertical_bias="0.469" />
 
     <TextView
-        android:id="@+id/NamesText"
+        android:id="@+id/ProgramNamesText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Jose Otero Perez\nand\nJesus Antonio Fragoso Jr."
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.552"
+        app:layout_constraintHorizontal_bias="0.556"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.424" />
+        app:layout_constraintVertical_bias="0.572" />
+
+    <TextView
+        android:id="@+id/ProducedByText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Produced by:"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.539"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.25" />
+
+    <TextView
+        android:id="@+id/ProducedNamesText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fredy Sanguinetti"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.55"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.31" />
 
     <Button
         android:id="@+id/CreditsBackBTN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
-        tools:layout_editor_absoluteX="278dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.989"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.015" />
 </android.support.constraint.ConstraintLayout>
