--- a/TriviaGame/app/src/main/res/layout/activity_questions_screen.xml
+++ b/TriviaGame/app/src/main/res/layout/activity_questions_screen.xml
@@ -11,11 +11,47 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Questions"
+        android:gravity="center_horizontal"
+        android:textColor="@color/Black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.172" />
+        app:layout_constraintVertical_bias="0.172"
+
+
+        />
+    <TextView
+        android:id="@+id/Scoretxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Score"
+        android:gravity="center_horizontal"
+        android:textSize="20dp"
+        android:textColor="@color/Black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.015"
+        app:layout_constraintHorizontal_bias="0.03"
+        />
+    <TextView
+        android:id="@+id/Lifetxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Life"
+        android:textSize="20dp"
+        android:textColor="@color/Black"
+        android:gravity="center_horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.078"
+        app:layout_constraintHorizontal_bias="0.03"
+
+        />
 
     <Button
         android:id="@+id/Answer1BTN"
