--- a/TriviaGame/app/src/main/res/values/colors.xml
+++ b/TriviaGame/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="Red">#D50000</color>
+    <color name="Green">#2E7D32</color>
+    <color name="Black">#000000</color>
 </resources>
