--- a/TriviaGame/app/src/main/res/values/styles.xml
+++ b/TriviaGame/app/src/main/res/values/styles.xml
@@ -7,5 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    
+    <style name="AppTheme.CustomTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowCloseOnTouchOutside">true</item>
+    </style>
 </resources>
