--- a/TriviaGame/app/src/main/res/layout/activity_main_menu.xml
+++ b/TriviaGame/app/src/main/res/layout/activity_main_menu.xml
@@ -7,17 +7,45 @@
     tools:context="fullsailclass.triviagame.MainMenu">
 
     <TextView
-        android:layout_width="167dp"
+        android:layout_width="197dp"
         android:layout_height="51dp"
-        android:text="TriviaSelf"
+        android:text=""
         android:textAlignment="center"
         android:textSize="36sp"
+        android:textColor="@color/Black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.121" />
+
+    <ImageView
+        android:layout_width="175dp"
+        android:layout_height="120dp"
+        android:textAlignment="center"
+        android:background="@drawable/triviaselfmenu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.08" />
+
+    <TextView
+        android:layout_width="85dp"
+        android:layout_height="21dp"
+        android:text="Build 4.0"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.99"
+        app:layout_constraintHorizontal_bias="0.99"
+
+        />
 
     <Button
         android:id="@+id/Solo"
