--- a/TriviaGame/app/src/main/res/values/colors.xml
+++ b/TriviaGame/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="Red">#D50000</color>
     <color name="Green">#2E7D32</color>
     <color name="Black">#000000</color>
+    <color name="Gray">#E0E0E0</color>
+
 </resources>
