Things got fixed

--- a/TriviaGame/app/src/main/res/layout/activity_game_over_pop_up.xml
+++ b/TriviaGame/app/src/main/res/layout/activity_game_over_pop_up.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="GAME OVER"
         android:textColor="@color/Red"
-        android:textSize="48sp"
+        android:textSize="36dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
