--- a/TriviaGame/app/src/main/res/layout/activity_main_menu.xml
+++ b/TriviaGame/app/src/main/res/layout/activity_main_menu.xml
@@ -2,9 +2,13 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/background1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="fullsailclass.triviagame.MainMenu">
+
+
+
 
     <TextView
         android:layout_width="197dp"
@@ -35,7 +39,7 @@
     <TextView
         android:layout_width="85dp"
         android:layout_height="21dp"
-        android:text="Build 4.0"
+        android:text="Build 5.0"
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -82,5 +86,19 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.796" />
+
+    <Button
+        android:id="@+id/Credits"
+        android:layout_width="90dp"
+        android:layout_height="40dp"
+        android:text="Credits"
+        android:textSize="12dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.996" />
 
 </android.support.constraint.ConstraintLayout>
