--- a/TriviaGame/app/src/main/res/layout/activity_solo_screen.xml
+++ b/TriviaGame/app/src/main/res/layout/activity_solo_screen.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fullsailclass.triviagame.SoloScreen">
+    tools:context="fullsailclass.triviagame.SoloScreen"
+    android:background="@drawable/background1">
 
     <Button
         android:id="@+id/Science"
         android:layout_width="154dp"
         android:layout_height="wrap_content"
         android:text="Science"
+        android:background="@drawable/menubutton"
+        android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -24,6 +27,7 @@
         android:text="Select a Category"
         android:textAlignment="center"
         android:textSize="30sp"
+        android:textColor="@color/Black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -35,6 +39,8 @@
         android:layout_width="154dp"
         android:layout_height="wrap_content"
         android:text="Sports"
+        android:background="@drawable/menubutton"
+        android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -46,6 +52,8 @@
         android:layout_width="154dp"
         android:layout_height="wrap_content"
         android:text="Pop Culture"
+        android:background="@drawable/menubutton"
+        android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -57,6 +65,8 @@
         android:layout_width="154dp"
         android:layout_height="wrap_content"
         android:text="History"
+        android:background="@drawable/menubutton"
+        android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -68,6 +78,8 @@
         android:layout_width="154dp"
         android:layout_height="wrap_content"
         android:text="Entertainment"
+        android:background="@drawable/menubutton"
+        android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -79,6 +91,8 @@
         android:layout_width="154dp"
         android:layout_height="wrap_content"
         android:text="Video Game"
+        android:background="@drawable/menubutton"
+        android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -90,6 +104,8 @@
         android:layout_width="154dp"
         android:layout_height="wrap_content"
         android:text="Music"
+        android:background="@drawable/menubutton"
+        android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -98,9 +114,12 @@
 
     <Button
         android:id="@+id/Back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="88dp"
+        android:layout_height="48dp"
         android:text="Back"
+
+        android:background="@drawable/menubutton"
+        android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.976"
         app:layout_constraintLeft_toLeftOf="parent"
