--- a/TriviaGame/app/src/main/res/layout/activity_main_menu.xml
+++ b/TriviaGame/app/src/main/res/layout/activity_main_menu.xml
@@ -28,7 +28,7 @@
         android:layout_width="175dp"
         android:layout_height="120dp"
         android:textAlignment="center"
-        android:background="@drawable/triviaselfmenu"
+        android:background="@drawable/triviaselfmenu2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -56,6 +56,8 @@
         android:layout_width="119dp"
         android:layout_height="wrap_content"
         android:text="Solo Mode"
+        android:background="@drawable/menubutton"
+        android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -68,6 +70,8 @@
         android:layout_width="119dp"
         android:layout_height="wrap_content"
         android:text="Multiplayer"
+        android:background="@drawable/menubutton"
+        android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -80,6 +84,8 @@
         android:layout_width="119dp"
         android:layout_height="wrap_content"
         android:text="Settings"
+        android:background="@drawable/menubutton"
+        android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -93,9 +99,11 @@
         android:layout_height="40dp"
         android:text="Credits"
         android:textSize="12dp"
+        android:background="@drawable/menubutton"
+        android:textColor="@color/White"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintHorizontal_bias="0.01"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
