--- a/TriviaGame/app/src/main/res/layout/activity_main_menu.xml
+++ b/TriviaGame/app/src/main/res/layout/activity_main_menu.xml
@@ -25,10 +25,10 @@
         app:layout_constraintVertical_bias="0.121" />
 
     <ImageView
-        android:layout_width="175dp"
-        android:layout_height="120dp"
-        android:textAlignment="center"
+        android:layout_width="347dp"
+        android:layout_height="200dp"
         android:background="@drawable/triviaselfmenu"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -53,47 +53,48 @@
 
     <Button
         android:id="@+id/Solo"
-        android:layout_width="119dp"
-        android:layout_height="wrap_content"
+        android:layout_width="218dp"
+        android:layout_height="86dp"
         android:text="Solo Mode"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.377" />
+        app:layout_constraintVertical_bias="0.394" />
 
     <Button
         android:id="@+id/Multplayer"
-        android:layout_width="119dp"
-        android:layout_height="wrap_content"
+        android:layout_width="218dp"
+        android:layout_height="86dp"
         android:text="Multiplayer"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.537" />
+        app:layout_constraintVertical_bias="0.628" />
 
     <Button
         android:id="@+id/Settings"
-        android:layout_width="119dp"
-        android:layout_height="wrap_content"
+        android:layout_width="218dp"
+        android:layout_height="86dp"
         android:text="Settings"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.796" />
+        app:layout_constraintVertical_bias="0.868" />
 
     <Button
         android:id="@+id/Credits"
-        android:layout_width="90dp"
-        android:layout_height="40dp"
-        android:text="Credits"
-        android:textSize="12dp"
+        android:layout_width="127dp"
+        android:layout_height="63dp"
         android:gravity="center"
+        android:text="Credits"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toLeftOf="parent"
