--- a/TriviaGame/app/src/main/res/layout/activity_questions_screen.xml
+++ b/TriviaGame/app/src/main/res/layout/activity_questions_screen.xml
@@ -55,10 +55,11 @@
 
     <Button
         android:id="@+id/Answer1BTN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Answer 1"
+        android:layout_width="218dp"
+        android:layout_height="86dp"
         android:background="@color/Gray"
+        android:text="Answer 1"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -68,8 +69,8 @@
 
     <Button
         android:id="@+id/Answer2BTN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="218dp"
+        android:layout_height="86dp"
         android:text="Answer 2"
         android:background="@color/Gray"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -81,8 +82,8 @@
 
     <Button
         android:id="@+id/Answer3BTN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="218dp"
+        android:layout_height="86dp"
         android:text="Answer 3"
         android:background="@color/Gray"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -94,8 +95,8 @@
 
     <Button
         android:id="@+id/Answer4BTN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="218dp"
+        android:layout_height="86dp"
         android:text="Answer 4"
         android:background="@color/Gray"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -119,9 +120,10 @@
 
     <TextView
         android:id="@+id/TimerText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="218dp"
+        android:layout_height="86dp"
         android:text="TextView"
+        android:textAlignment="center"
         android:textColor="@color/Black"
         android:textSize="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
