--- a/TriviaGame/app/src/main/res/values/colors.xml
+++ b/TriviaGame/app/src/main/res/values/colors.xml
@@ -7,6 +7,9 @@
     <color name="Green">#2E7D32</color>
     <color name="Black">#000000</color>
     <color name="Gray">#E0E0E0</color>
+    <color name="Aqua">#00CCCC</color>
+    <color name="DarkAqua">#009999</color>
+
 
 
 </resources>
